<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    tools:context="edu.singaporetech.btco.BTCOActivity">

    <LinearLayout
        android:id="@+id/blockDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_blocks_to_mine"
            android:textColor="@color/colorLabels" />

        <EditText
            android:id="@+id/blocksEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_2_to_88"
            android:gravity="center"
            android:inputType="number"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/difficultyDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blockDiv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_difficulty"
            android:textColor="@color/colorLabels" />

        <EditText
            android:id="@+id/difficultyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_1_to_10"
            android:gravity="center"
            android:inputType="number"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/messageDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficultyDiv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_message"
            android:textColor="@color/colorLabels" />

        <EditText
            android:id="@+id/msgEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/describe_your_transaction_in_words"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/genesisButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mine_genesis"
        android:background="@color/colorButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageDiv" />

    <Button
        android:id="@+id/chainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mine_chain"
        android:layout_marginTop="10dp"
        android:background="@color/colorButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genesisButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/data_hash"
        android:textColor="@color/colorLabels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chainButton" />

    <TextView
        android:id="@+id/dataHashTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hash_of_the_data_displayed_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataHashTextView" />

    <TextView
        android:id="@+id/logTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>